Fix bookCard alignment bug

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -63,6 +63,11 @@ a {
     font-size: 1.25rem;
 }
 
+.bookListSection {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .noBooksMessage {
     font-family: "Licorice", cursive;
     font-size: 3rem;
@@ -81,8 +86,6 @@ a {
     border-radius: 5px;
     box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    margin-left: 5px;
-    margin-right: 5px;
 }
 .bookInfoContainer {
     flex-grow: 1;
